--- a/states-frontend/style.css
+++ b/states-frontend/style.css
@@ -13,12 +13,25 @@ input[type=submit]{
   background-color: #2c436d;
   border: none;
   color: white;
-  padding: 3px 100px;
+  padding: 3px 83px;
   text-decoration: none;
   margin: 4px 2px;
   cursor: pointer;
 }
 input[type=submit]:hover {
+  background-color: #066406;
+  color: white;
+}
+button{
+  background-color: #2c436d;
+  border: none;
+  color: white;
+  padding: 3px 50px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+button:hover {
   background-color: #066406;
   color: white;
 }
